--- a/QuickNotes/MainPage.xaml
+++ b/QuickNotes/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QuickNotes.MainPage">
+             x:Class="QuickNotes.MainPage"
+             xmlns:viewmodel="clr-namespace:QuickNotes.ViewModel"
+             x:DataType="viewmodel:MainViewModel">
     <Grid RowDefinitions="Auto, Auto, *"
           ColumnDefinitions=".15*,.7*,.15*">
 
@@ -10,16 +12,10 @@
         <Label Grid.Row="0" Grid.Column="2" Text="NEXT"/>
 
         <Entry Grid.Row="1" Grid.ColumnSpan="2" Placeholder="Enter a note..." Text="{Binding NewNote}"/>
-        <Button Grid.Row="1" Grid.Column="2" Text="Add note"/>
+        <Button Grid.Row="1" Grid.Column="2" Command="{Binding AddNewNoteCommand}" Text="Add note"/>
 
-        <CollectionView Grid.Row="2" Grid.ColumnSpan="3">
-            <CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Do laundry</x:String>
-                    <x:String>Do dishes</x:String>
-                    <x:String>Practice programming</x:String>
-                </x:Array>
-            </CollectionView.ItemsSource>
+        <CollectionView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding Notes}">
+            
         </CollectionView>
     </Grid>
 
